tests/errors/syn.overflow.u32-value.or
main :: () -> void {
    x := 100_000_000_000u32;
    x;
};